k8s-frontend/store-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-frontend-container
spec:
  replicas: 2
  selector:
    matchLabels:
      app: store-frontend-container
  template:
    metadata:
      labels:
        app: store-frontend-container
    spec:
      containers:
      - name: store-frontend-container
        image: maalami/springbootstorefrontend
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: store-frontend-service
spec:
  selector:
    app: store-frontend-container
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
