k8s-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: store-frontend-service
                port:
                  number: 80
          - path: /store
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8442
          - path: /inventory
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8442
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8442
